; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/cfi/extr_cfi_core.c_cfi_read_qry.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/cfi/extr_cfi_core.c_cfi_read_qry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cfi_softc = type { i32 }

@CFI_QRY_CMD_ADDR = common dso_local global i32 0, align 4
@CFI_QRY_CMD_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cfi_read_qry(%struct.cfi_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.cfi_softc*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.cfi_softc* %0, %struct.cfi_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.cfi_softc*, %struct.cfi_softc** %3, align 8
  %7 = load i32, i32* @CFI_QRY_CMD_ADDR, align 4
  %8 = load %struct.cfi_softc*, %struct.cfi_softc** %3, align 8
  %9 = getelementptr inbounds %struct.cfi_softc, %struct.cfi_softc* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = mul nsw i32 %7, %10
  %12 = load i32, i32* @CFI_QRY_CMD_DATA, align 4
  %13 = call i32 @cfi_write(%struct.cfi_softc* %6, i32 %11, i32 %12)
  %14 = load %struct.cfi_softc*, %struct.cfi_softc** %3, align 8
  %15 = load i32, i32* %4, align 4
  %16 = load %struct.cfi_softc*, %struct.cfi_softc** %3, align 8
  %17 = getelementptr inbounds %struct.cfi_softc, %struct.cfi_softc* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = mul nsw i32 %15, %18
  %20 = call i32 @cfi_read(%struct.cfi_softc* %14, i32 %19)
  store i32 %20, i32* %5, align 4
  %21 = load %struct.cfi_softc*, %struct.cfi_softc** %3, align 8
  %22 = call i32 @cfi_reset_default(%struct.cfi_softc* %21)
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @cfi_write(%struct.cfi_softc*, i32, i32) #1

declare dso_local i32 @cfi_read(%struct.cfi_softc*, i32) #1

declare dso_local i32 @cfi_reset_default(%struct.cfi_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
